--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,61 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.booboomx.todaynews.ui.MainActivity">
+    tools:context="com.booboomx.todaynews.ui.activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+
+    <com.booboomx.todaynews.view.UnScrollViewPager
+        android:id="@+id/viewPager"
+        android:paddingBottom="40dp"
+        android:background="@android:color/transparent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+
+    <RadioGroup
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/tab_rg_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:drawableTop="@drawable/tab_01"
+            android:checked="true"
+            android:id="@+id/tab_rb_1"
+            style="@style/tab_rb_style"
+            android:text="@string/home"
+            />
+
+
+        <RadioButton
+            android:drawableTop="@drawable/tab_02"
+            android:id="@+id/tab_rb_2"
+            style="@style/tab_rb_style"
+            android:text="@string/video"
+            />
+        <RadioButton
+            android:drawableTop="@drawable/tab_03"
+            android:id="@+id/tab_rb_3"
+            style="@style/tab_rb_style"
+            android:text="@string/concern"
+            />
+        <RadioButton
+            android:drawableTop="@drawable/tab_04"
+            android:id="@+id/tab_rb_4"
+            style="@style/tab_rb_style"
+            android:text="@string/mine"
+            />
+
+    </RadioGroup>
+
+
+
+
+
+
+
 </RelativeLayout>
