--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.booboomx.todaynews.ui.activity.MainActivity">
 
 
-    <com.booboomx.todaynews.view.UnScrollViewPager
+    <com.booboomx.todaynews.widget.UnScrollViewPager
         android:id="@+id/viewPager"
         android:paddingBottom="40dp"
         android:background="@android:color/transparent"
