列表添加视频播放

--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -17,11 +17,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <View
+        <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
             android:id="@+id/videoPlayer"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
-
 
         <LinearLayout
             android:layout_width="match_parent"
