--- a/app/src/main/res/layout/item_article_image.xml
+++ b/app/src/main/res/layout/item_article_image.xml
@@ -6,6 +6,7 @@
                                     app:cardBackgroundColor="@color/white"
                                     app:cardCornerRadius="8dp"
                                     app:cardElevation="3dp"
+                                    android:id="@+id/cardView"
                                     app:cardPreventCornerOverlap="true"
                                     app:cardUseCompatPadding="true"
 
