--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,22 @@
     </style>
 
 
+    <style name="NewsDetailTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground" >@color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+
+        <item name="android:colorBackgroundCacheHint">@null</item>
+
+    </style>
+
+    <style name="PictureDownLoadTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground" >@color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+
+        <item name="android:colorBackgroundCacheHint">@null</item>
+    </style>
+
+
 
 
 
