--- a/app/src/main/res/layout/mine_fragment_header.xml
+++ b/app/src/main/res/layout/mine_fragment_header.xml
@@ -22,7 +22,7 @@
         android:visibility="visible">
 
         <ImageView
-            android:id="@+id/img_avatar"
+            android:id="@+id/iv_headView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_my_avatar"/>
