完善我的界面

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -18,7 +18,7 @@
             >
             <include layout="@layout/mine_fragment_header"/>
 
-            <!--<include layout="@layout/mine_fragment_content"/>-->
+            <include layout="@layout/mine_fragment_content"/>
         </LinearLayout>
 
 
