--- a/app/src/main/res/layout/mine_fragment_content.xml
+++ b/app/src/main/res/layout/mine_fragment_content.xml
@@ -8,6 +8,8 @@
 
 
     <LinearLayout
+        android:background="@color/white"
+        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
