--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -43,6 +43,7 @@
     <attr name="font_color2" format="reference|color"/>
     <attr name="font_red" format="reference|color"/>
     <attr name="isColorUi" format="boolean"/>
+    <attr name="image_bg" format="reference|color"/>
     <attr name="divider_black" format="reference|color"/>
     <attr name="divider_light_grey" format="reference|color"/>
 
