--- a/app/src/main/res/layout/item_article_no_image.xml
+++ b/app/src/main/res/layout/item_article_no_image.xml
@@ -3,18 +3,16 @@
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-
                                     android:layout_marginTop="3dp"
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginRight="8dp"
 
-                                    app:cardBackgroundColor="@color/white"
                                     app:contentPadding="8dp"
                                     app:cardCornerRadius="10dp"
                                     app:cardElevation="10dp"
-
-
                                     android:id="@+id/cardView"
+                                    app:isColorUi="true"
+                                    app:cardBackgroundColor="?attr/main_bg"
                                     app:cardUseCompatPadding="true"
                                     app:cardPreventCornerOverlap="true"
     >
@@ -35,9 +33,10 @@
             <TextView
                 android:layout_marginTop="5dp"
                 android:textSize="16sp"
-                android:textColor="@color/black"
                 android:text="我是今日头条"
                 android:id="@+id/tv_title"
+                app:isColorUi="true"
+                android:textColor="?attr/font_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -55,7 +54,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="中新网移动版"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/font_color2"
+
                     android:textSize="14sp"
                     />
 
@@ -66,7 +66,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="1020评论"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/font_color2"
+
                     android:textSize="14sp"
                     />
 
@@ -77,7 +78,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="5分钟前"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/font_color2"
+
                     android:textSize="14sp"
                     />
 
