--- a/app/src/main/res/layout/item_gallery_image.xml
+++ b/app/src/main/res/layout/item_gallery_image.xml
@@ -5,10 +5,12 @@
                                     android:layout_height="wrap_content"
 
 
+                                    app:isColorUi="true"
+                                    app:cardBackgroundColor="?attr/main_bg"
+
                                     android:layout_marginTop="3dp"
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginRight="8dp"
-                                    app:cardBackgroundColor="@color/white"
                                     app:contentPadding="8dp"
                                     app:cardCornerRadius="10dp"
                                     app:cardElevation="10dp"
@@ -30,7 +32,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:text="我是今日头条"
-            android:textColor="@color/black"
+
+            android:textColor="?attr/font_color"
             android:textSize="16sp"/>
 
 
@@ -66,7 +69,8 @@
                     android:drawablePadding="2dp"
                     android:gravity="center"
                     android:text="9图"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/font_color2"
+
                     android:textSize="12sp"/>
             </LinearLayout>
         </RelativeLayout>
@@ -87,7 +91,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="中新网移动版"
-                android:textColor="@color/black"
+                android:textColor="?attr/font_color2"
+
                 android:textSize="14sp"
                 />
 
@@ -98,7 +103,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="1020评论"
-                android:textColor="@color/black"
+                android:textColor="?attr/font_color2"
+
                 android:textSize="14sp"
                 />
 
@@ -109,7 +115,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="5分钟前"
-                android:textColor="@color/black"
+                android:textColor="?attr/font_color2"
+
                 android:textSize="14sp"
                 />
         </LinearLayout>
