--- a/app/src/main/res/layout/item_gallery_no_image.xml
+++ b/app/src/main/res/layout/item_gallery_no_image.xml
@@ -5,10 +5,11 @@
                                     android:layout_height="wrap_content"
                                     android:id="@+id/cardView"
 
+                                    app:isColorUi="true"
+                                    app:cardBackgroundColor="?attr/main_bg"
                                     android:layout_marginTop="3dp"
                                     android:layout_marginLeft="8dp"
                                     android:layout_marginRight="8dp"
-                                    app:cardBackgroundColor="@color/white"
                                     app:contentPadding="8dp"
                                     app:cardCornerRadius="10dp"
                                     app:cardElevation="10dp"
@@ -34,9 +35,9 @@
             <TextView
                 android:layout_marginTop="5dp"
                 android:textSize="16sp"
-                android:textColor="@color/black"
                 android:text="我是今日头条"
                 android:id="@+id/tv_title"
+                android:textColor="?attr/font_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -54,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="中新网移动版"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/font_color2"
                     android:textSize="14sp"
                     />
 
@@ -65,7 +66,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="1020评论"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/font_color2"
+
                     android:textSize="14sp"
                     />
 
@@ -76,7 +78,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="5分钟前"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/font_color2"
+
                     android:textSize="14sp"
                     />
 
